# liquify

./: .gitignore  AGENTS.md  Jenkinsfile  Jenkinsfile.local  RATIONALE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_app.py  boolean_flags.py  broadcast_demo.py  broadcast_demo.yaml  demo_config.yaml  liquifai_app.py  liquify_app.py  simple_app.py
liquifai/: __init__.py  _fast_complete.py  completion.py  context.py  core.py  discovery.py  report.py  scopes.py
liquify/: __init__.py  core.py  discovery.py  report.py
tests/: test_bootstrap.py  test_completion.py  test_core.py  test_core_extended.py  test_deep_flow_namedtuple.py  test_di_nested.py  test_discovery_report.py  test_flow_modes.py  test_help_with_config.py  test_injection.py  test_lazy_passthrough.py  test_override_broadcast.py  test_override_grammar.py  test_override_into_fluid.py  test_polarity_overrides.py  test_scope_advanced.py  test_scope_cli.py  test_scopes.py
